--- a/translations/kangyur/placeholders/063-001_toh220-eradicating_confused_discipline_a_scriptural_collection_of_the_buddha.xml
+++ b/translations/kangyur/placeholders/063-001_toh220-eradicating_confused_discipline_a_scriptural_collection_of_the_buddha.xml
@@ -19,9 +19,10 @@
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
                 <editor role="projectEditor" ref="eft:person-274">Adam Krug</editor>
                 <editor role="copyEditor" ref="eft:person-252">Dion Blundell</editor>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -41,31 +42,26 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-26T13:45:17.47Z" user="admin">26/09/2022 13:45:17</note>
-
+                <note type="lastUpdated" date-time="2022-10-12T12:37:10.219Z" user="admin">12/10/2022 12:37:10</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
-            
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary added</note>
-    <note type="updated" update="translation-status" value="2.f" date-time="2022-01-03T14:15:11.617Z" user="line-tofte">2.f</note>
-
-    <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-03T14:15:11.617Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-03T14:15:37.496Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="translation-status" value="2.g" date-time="2022-01-03T14:42:36.019Z" user="line-tofte">2.g</note>
-
-    <note type="updated" update="text-version" value="0.0.5" date-time="2022-01-03T14:42:36.019Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.f" date-time="2022-02-22T08:27:34.748Z" user="line-tofte">2.f</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2022-02-22T08:27:34.748Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.e" date-time="2022-02-23T09:19:40.463Z" user="line-tofte">2.e</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2022-02-23T09:19:40.463Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.8" date-time="2022-02-23T09:20:05.569Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.d" date-time="2022-07-15T14:52:53.958Z" user="line-tofte">2.d</note>
-    <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-15T14:52:53.958Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.c" date-time="2022-09-26T13:45:04.943Z" user="line-tofte">2.c</note>
-    <note type="updated" update="text-version" value="0.0.10" date-time="2022-09-26T13:45:04.943Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary added</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-01-03T14:15:11.617Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-03T14:15:11.617Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-03T14:15:37.496Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-01-03T14:42:36.019Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-01-03T14:42:36.019Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-02-22T08:27:34.748Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-02-22T08:27:34.748Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-02-23T09:19:40.463Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-02-23T09:19:40.463Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-02-23T09:20:05.569Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-07-15T14:52:53.958Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-15T14:52:53.958Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2022-09-26T13:45:04.943Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-09-26T13:45:04.943Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-10-12T12:37:04.71Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
