--- a/translations/kangyur/placeholders/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
+++ b/translations/kangyur/placeholders/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
@@ -17,10 +17,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-066-006"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-01T15:38:33.468Z" user="admin">01/09/2022 15:38:33</note>
+                <note type="lastUpdated" date-time="2022-10-13T13:22:55.881Z" user="admin">13/10/2022 13:22:55</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:06:19.772Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:20:56.718Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:20:56.718Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -45,6 +45,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-09-01T15:37:43.857Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-01T15:37:43.857Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-01T15:38:25.334Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-10-13T13:22:50.398Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-10-13T13:22:50.398Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
