--- a/translations/kangyur/placeholders/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
+++ b/translations/kangyur/placeholders/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
@@ -16,9 +16,10 @@
                 <consultant role="projectManager" ref="eft:person-361">Bhikṣuṇī Thubten Damcho</consultant>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.18 <date>2021</date>
+                <edition>v 0.0.19 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.a">
@@ -37,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-14T07:36:14.405Z" user="admin">14/10/2022 07:36:14</note>
+                <note type="lastUpdated" date-time="2022-10-14T07:36:55.281Z" user="admin">14/10/2022 07:36:55</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:50:56.023Z" user="line-tofte">3</note>
@@ -66,6 +67,7 @@
                 <note type="updated" update="text-version" value="0.0.17" date-time="2022-10-05T07:20:43.383Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2022-10-14T07:36:08.944Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.18" date-time="2022-10-14T07:36:08.944Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.19" date-time="2022-10-14T07:36:49.797Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
