--- a/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
+++ b/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
@@ -33,10 +33,10 @@
                                         Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -77,7 +77,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-09-17T16:48:54.899Z" user="admin">17/09/2022 16:48:54</note>
+                                <note type="lastUpdated" date-time="2022-10-16T10:12:49.799Z" user="admin">16/10/2022 10:12:49</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:45:27.762Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:45:27.762Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:07:57.739Z" user="line-tofte">3</note>
@@ -127,6 +127,8 @@
                             <note type="updated" update="translation-status" value="1.a" date-time="2022-09-16T01:17:09.29Z" user="sameer">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-16T01:17:09.29Z" user="sameer">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-17T16:48:50.837Z" user="andre">Glossary matching revised, activated in CG</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2022-10-16T10:12:44.287Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2022-10-16T10:12:44.287Z" user="sameer">Included in App v2.4</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
