--- a/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
+++ b/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
@@ -32,15 +32,15 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability>
+                <availability>
           <p type="tantricRestriction">
             <emph rend="bold">Warning:</emph> Readers are reminded that according to Vajrayāna Buddhist tradition there are
             restrictions and commitments concerning tantra. Practitioners who are not sure if they should read this
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-01T21:49:23.362Z" user="admin">01/10/2022 21:49:23</note>
+        <note type="lastUpdated" date-time="2022-10-16T10:19:35.642Z" user="admin">16/10/2022 10:19:35</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:52:10.736Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:52:10.736Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T08:10:37.707Z" user="line-tofte">2.h</note>
@@ -122,6 +122,8 @@
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-15T18:45:35.492Z" user="martina-cotter">Updated typo.</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-09-15T18:54:42.182Z" user="martina-cotter">Updated typo.</note>
           <note type="updated" update="text-version" value="1.0.3" date-time="2022-10-01T21:49:19.246Z" user="martina-cotter">updated glossary entries</note>
+          <note type="updated" update="translation-status" value="1" date-time="2022-10-16T10:19:30.049Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.4" date-time="2022-10-16T10:19:30.049Z" user="sameer">Included in App v2.4</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
