--- a/translations/kangyur/translations/062-002_toh202-evaluating_whether_progress_is_certain_or_uncertain.xml
+++ b/translations/kangyur/translations/062-002_toh202-evaluating_whether_progress_is_certain_or_uncertain.xml
@@ -35,11 +35,11 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
 
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -79,7 +79,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-09-30T14:41:00.957Z" user="admin">30/09/2022 14:41:00</note>
+                                <note type="lastUpdated" date-time="2022-10-16T10:22:59.21Z" user="admin">16/10/2022 10:22:59</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:17:33.326Z" user="mike">2.d</note>
@@ -120,6 +120,8 @@
                             <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-29T02:12:43.16Z" user="sameer">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-29T12:36:35.606Z" user="john">Some changes to make a number of slightly strange English phrases read more naturally.</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2022-09-30T14:40:56.958Z" user="andre">Glossary status updated, now active in CG</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2022-10-16T10:22:53.699Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2022-10-16T10:22:53.699Z" user="sameer">Included in App v2.4</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
