--- a/translations/kangyur/translations/044-001_toh81-simhas_questions.xml
+++ b/translations/kangyur/translations/044-001_toh81-simhas_questions.xml
@@ -37,11 +37,11 @@
         <editor role="TEImarkupEditor" ref="eft:person-108">André Rodrigues</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
 
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -75,7 +75,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-03T09:45:42.104Z" user="admin">03/10/2022 09:45:42</note>
+        <note type="lastUpdated" date-time="2022-10-16T10:25:07.233Z" user="admin">16/10/2022 10:25:07</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-04T09:32:27.59Z" user="andreas">v 0.1.0</note>
         <note type="updated" update="translation-status" value="2.e" date-time="2019-11-04T09:32:27.59Z" user="andreas">2.e</note>
         <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:23.67Z" user="mike">2.f</note>
@@ -107,6 +107,8 @@
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-23T14:49:49.926Z" user="andre">First published September 23, 2022</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-24T10:07:54.608Z" user="john">Vulture Peak Mountain changed to Vulture Peak.</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-10-03T09:45:38.082Z" user="john">One glossary entry edited.</note>
+          <note type="updated" update="translation-status" value="1" date-time="2022-10-16T10:25:01.691Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.3" date-time="2022-10-16T10:25:01.691Z" user="sameer">Included in App v2.4</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
