--- a/translations/kangyur/placeholders/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/placeholders/072-038_toh338-classification_of_acts.xml
@@ -19,11 +19,11 @@
                 <editor role="projectEditor" ref="contributors.xml#person-262">David Higgins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-072-038"/>
                 <date/>
             </publicationStmt>
@@ -39,12 +39,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-30T09:51:50.387Z" user="admin">30/08/2021 09:51:50</note>
+                <note type="lastUpdated" date-time="2022-10-17T12:42:03.81Z" user="admin">17/10/2022 12:42:03</note>
             <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-30T08:52:36.021Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-30T09:51:45.426Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-30T09:51:45.426Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-10-17T12:41:59.681Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-17T12:41:59.681Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
