--- a/translations/kangyur/placeholders/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/placeholders/072-038_toh338-classification_of_acts.xml
@@ -4,22 +4,21 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">las rnam 'byed/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">karmavibhaṅga</title>
                 <title type="mainTitle" xml:lang="en">Classification of Acts</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">las rnam par 'byed pa</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">karmavibhaṅga</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">las rnam 'byed/</title>
                 <title type="otherTitle" xml:lang="en">mahākarmavibhaṅga</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">las rnam par 'byed pa</title>
-                <title type="otherTitle" xml:lang="en">mahākarmavibhaṅga</title>
-                <author role="translatorMain" ref="contributors.xml#team-6"/>
-                <author role="translatorEng" ref="contributors.xml#person-23">Bruno Galasek-Hul</author>
-                <editor role="externalReviewer" ref="contributors.xml#person-287">Andrew Quintman</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-23">Bruno Galasek-Hul</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-25">Lama Kunga Thartse Rinpoche</consultant>
-                <editor role="projectEditor" ref="contributors.xml#person-262">David Higgins</editor>
+                <author role="translatorMain" ref="eft:team-6"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <editor role="externalReviewer" ref="eft:person-287">Andrew Quintman</editor>
+                <consultant role="projectManager" ref="eft:person-23">Bruno Galasek-Hul</consultant>
+                <consultant role="advisor" ref="eft:person-25">Lama Kunga Thartse Rinpoche</consultant>
+                <editor role="projectEditor" ref="eft:person-262">David Higgins</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,12 +38,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-17T12:42:03.81Z" user="admin">17/10/2022 12:42:03</note>
-            <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-30T08:52:36.021Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-30T09:51:45.426Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-10-17T12:41:59.681Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-17T12:41:59.681Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-10-17T12:42:33.22Z" user="admin">17/10/2022 12:42:33</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-30T08:52:36.021Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-30T09:51:45.426Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-10-17T12:41:59.681Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-17T12:41:59.681Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-10-17T12:42:31.79Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
