--- a/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
@@ -26,7 +26,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.4.1 <date>2022</date>
+                <edition>v 1.4.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -62,7 +62,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-30T18:14:38.775Z" user="admin">30/09/2022 18:14:38</note>
+        <note type="lastUpdated" date-time="2022-10-17T18:48:03.552Z" user="admin">17/10/2022 18:48:03</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-12-16T08:24:15.715Z" user="line-tofte">3</note>
@@ -106,6 +106,7 @@
           <note type="updated" update="translation-status" value="1.a" date-time="2022-09-19T09:49:02.249Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.3.1" date-time="2022-09-19T09:49:02.249Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
           <note type="updated" update="text-version" value="1.4.1" date-time="2022-09-30T18:14:34.758Z" user="john">Added material to introduction and added and edited notes.</note>
+          <note type="updated" update="text-version" value="1.4.2" date-time="2022-10-17T18:48:00.692Z" user="celso">Fixed bad link</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -540,7 +541,7 @@
                 includes <foreign xml:lang="Sa-Ltn">sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite</foreign>
                 here. There is significant variation at this point across the Tibetan and Sanskrit
                 sources. Please see the corresponding passage of the dhāraṇī in <ref target="https://read.84000.co/translation/toh594.html#UT22084-090-038-49">Toh
-                  594</ref>, <ref target="https://read.84000.co/translation/toh595.html#UT22084-090-039-50">595</ref>, <ref target="https://read.84000.co/translation/toh596.html#UT22084-090-038-49">596</ref>, and <ref target="https://read.84000.co/translation/toh597.html#UT22084-090-041-57">597</ref>/<ref target="https://read.84000.co/translation/toh984.html#UT22084-090-041-57">984</ref> for the variants reported in those texts.</note> |
+                  594</ref>, <ref target="https://read.84000.co/translation/toh595.html#UT22084-090-039-50">595</ref>, <ref target="https://read.84000.co/translation/toh596.html#UT22084-090-040-47">596</ref>, and <ref target="https://read.84000.co/translation/toh597.html#UT22084-090-041-57">597</ref>/<ref target="https://read.84000.co/translation/toh984.html#UT22084-090-041-57">984</ref> for the variants reported in those texts.</note> |
               sarvatathāgatāś ca māṃ<note place="end" xml:id="UT22084-090-042-186">
                                 <foreign xml:lang="Sa-Ltn">māṃ</foreign> is
                 absent in Hidas’ Sanskrit edition.</note> samāśvāsayantu | oṁ<note place="end" xml:id="UT22084-090-042-187">This
