--- a/translations/kangyur/placeholders/059-009_toh166-the_sutra_of_the_questions_of_rastrapala.xml
+++ b/translations/kangyur/placeholders/059-009_toh166-the_sutra_of_the_questions_of_rastrapala.xml
@@ -16,10 +16,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2022</date>
+                <edition>v 0.0.13 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-059-009"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-27T13:32:57.742Z" user="admin">27/09/2022 13:32:57</note>
+                <note type="lastUpdated" date-time="2022-10-24T09:36:17.021Z" user="admin">24/10/2022 09:36:17</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-02-15T13:26:04.633Z" user="line-tofte">3</note>
@@ -58,6 +58,8 @@
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-09-01T15:40:34.461Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2022-09-27T13:32:49.684Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-09-27T13:32:49.684Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2022-10-24T09:36:11.426Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2022-10-24T09:36:11.426Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
