--- a/translations/kangyur/translations/051-004_toh116_baskets_display.xml
+++ b/translations/kangyur/translations/051-004_toh116_baskets_display.xml
@@ -26,7 +26,7 @@
                 <sponsor ref="sponsors.xml#sponsor-31">Tony Leung Chiu Wai and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 2.47.23 <date>2021</date>
+                <edition>v 2.47.24 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -60,7 +60,7 @@
             
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T04:29:49.529Z" user="admin">26/07/2022 04:29:49</note>
+                <note type="lastUpdated" date-time="2022-10-25T19:55:49.722Z" user="admin">25/10/2022 19:55:49</note>
                 <tei:note type="updated" update="text-version" value="v 2.46" date-time="2019-06-18T02:52:27.743Z" user="celso">v 2.46 2019</tei:note>
                 <tei:note type="updated" update="text-version" value="v 2.47" date-time="2019-07-27T10:08:24.984Z" user="laura">v 2.47 2019</tei:note>
                 <tei:note type="updated" update="text-version" value="v 2.47.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</tei:note>
@@ -86,6 +86,7 @@
                 <note type="updated" update="text-version" value="2.47.21" date-time="2022-06-27T20:30:10.566Z" user="martina-cotter">2.47.21</note>
                 <note type="updated" update="text-version" value="2.47.22" date-time="2022-07-01T12:20:14.485Z" user="martina-cotter">Updated passage in 2.119.</note>
                 <note type="updated" update="text-version" value="2.47.23" date-time="2022-07-26T04:29:47.475Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="2.47.24" date-time="2022-10-25T19:55:46.813Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -3597,7 +3598,7 @@
                     <bibl xml:id="UT22084-051-004-272">
                         <title xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa thams cad kyi byin gyis rlabs kyi snying po gsang ba
                             ring bsrel gyi za ma tog ces bya ba’i gzungs</title> (<title xml:lang="Sa-Ltn">
-                            <tei:ref rend="pending" target="https://read.84000.co/translation/toh507.html">Ārya­sarva­tathāgatā­dhiṣṭhāna­hṛdaya­guhya­dhātu­karaṇḍa­nāma­dhāraṇī</tei:ref>
+                            <tei:ref target="https://read.84000.co/translation/toh507.html">Ārya­sarva­tathāgatā­dhiṣṭhāna­hṛdaya­guhya­dhātu­karaṇḍa­nāma­dhāraṇī</tei:ref>
                         </title>) [<title xml:lang="en">The Dhāraṇī Named The Relic Casket that is the Secret Essence of the Blessings of all the
                             Tathāgatas</title>]. Toh. 507, Degé Kangyur, vol. 88 (rgyud ’bum, na), folios
                         1b–7b.</bibl>
