--- a/translations/kangyur/translations/094-002_toh725,909-the_dharani_mother_of_avalokitesvara.xml
+++ b/translations/kangyur/translations/094-002_toh725,909-the_dharani_mother_of_avalokitesvara.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="../../../schema/current/translation.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<TEI xmlns="http://www.tei-c.org/ns/1.0">
+<tei:TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
             <titleStmt>
@@ -13,7 +13,7 @@
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་སྤྱན་རས་གཟིགས་དབང་ཕྱུག་གི་ཡུམ་ཞེས་བྱ་བའི་གཟུངས།</title>
                 <title type="longTitle" xml:lang="en">The Noble Dhāraṇī “The Mother of Avalokiteśvara”</title>
                 <title type="otherTitle" xml:lang="zh"/>
-                <author role="translatorMain" ref="contributors.xml#team-48">Translated by Lhasey Lotsawa Translations and Publications<lb/>under the
+                <author role="translatorMain" ref="contributors.xml#team-48">Translated by Samye Translations and Publications<lb/>under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-305">Stefan Mang</author>
                 <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.5 <date>2021</date>
+                <edition>v 1.1.7 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -61,7 +61,7 @@
                 </bibl>
                 <bibl key="toh909" type="text">
                     <ref>Toh 909</ref>
-                    <biblScope>Degé Kangyur, vol. 100 (gzungs, e), folios 240.a–241.b.</biblScope>
+                    <biblScope>Degé Kangyur, vol. 100 (gzungs, e), folios 240.a–241.b</biblScope>
                     <author role="translatorTib">Jinamitra</author>
                     <author role="translatorTib">Dānaśīla</author>
                     <author role="translatorTib">Bandé Yeshé De</author>
@@ -73,7 +73,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-27T09:27:42.122Z" user="admin">27/04/2021 09:27:42</note>
+                <note type="lastUpdated" date-time="2022-10-26T20:03:54.091Z" user="admin">26/10/2022 20:03:54</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:49:48.717Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:49:48.717Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-06-09T09:20:34.006Z" user="line-tofte">2.h</note>
@@ -118,7 +118,7 @@
     <note type="updated" update="text-version" value="1.1.2" date-time="2021-03-12T19:16:35.843Z" user="celso">Non-breaking spaces before dandas</note>
     <note type="updated" update="text-version" value="1.1.3" date-time="2021-03-12T19:17:25.614Z" user="celso">reset blank pdfs</note>
     <note type="updated" update="text-version" value="1.1.4" date-time="2021-03-17T20:00:32.307Z" user="celso">@key added to note to create alternate message regarding vol 100+ text</note>
-                <note type="updated" update="text-version" value="1.1.5" date-time="2021-04-27T09:27:39.035Z" user="mike">Fixed Faxian mistake</note>
+                <note type="updated" update="text-version" value="1.1.5" date-time="2021-04-27T09:27:39.035Z" user="mike">Fixed Faxian mistake</note>    <note type="updated" update="text-version" value="1.1.6" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.7" date-time="2022-10-26T20:03:51.283Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -135,7 +135,7 @@
             <div type="acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-094-002-2"/>
-                <p tid="4">Translated by Lhasey Lotsawa Translations and Publications under the guidance of Phakchok Rinpoche. The translation and
+                <p tid="4">Translated by Samye Translations and Publications under the guidance of Phakchok Rinpoche. The translation and
                     introduction were produced by Lowell Cook and Stefan Mang. The translation was checked against the Chinese by Dr. Jeffrey
                     Kotyk.</p>
                 <p tid="5">The translation was completed under the patronage and supervision of 84000: Translating the Words of the Buddha.</p>
@@ -160,9 +160,9 @@
                     <milestone unit="chunk" xml:id="UT22084-094-002-4"/>
                     <p tid="8">As indicated by the text’s title, the dhāraṇī concerns a goddess named or bearing the title Avalokiteśvaramātā,
                         “the mother of Avalokiteśvara.” In the Degé Kangyur,<note place="end" xml:id="UT22084-094-002-56">
-                            <p key="toh725" tid="32">Note that there is a discrepancy among various databases for cataloging the Toh 909 version of
+                            <p key="toh725">Note that there is a discrepancy among various databases for cataloging the Toh 909 version of
                                 this text within vol. 100 or 101 of the Degé Kangyur. See Toh 909 <ref target="https://read.84000.co/translation/toh909.html#end-note-UT22084-094-002-56">note 2</ref> for details.</p>
-                            <p key="toh909" tid="33">This text, Toh 909, and all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs, e</foreign>), are listed as being located in volume 100 of the Degé Kangyur by the Buddhist Digital
+                            <p key="toh909">This text, Toh 909, and all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs, e</foreign>), are listed as being located in volume 100 of the Degé Kangyur by the Buddhist Digital
                                 Resource Center (BDRC). However, several other Kangyur databases—including the eKangyur that supplies the digital
                                 input version displayed by the 84000 Reading Room—list this work as being located in volume 101. This discrepancy is
                                 partly due to the fact that the two volumes of the <foreign xml:lang="Bo-Ltn">gzungs ’dus</foreign> section are an
@@ -511,17 +511,16 @@
                     </item>
 
                     <item>
-                        <gloss type="place" xml:id="UT22084-094-002-54">
-                            <term>Vaiśālī </term>
-                            <term xml:lang="Bo-Ltn">yangs pa </term>
-                            <term xml:lang="bo">ཡངས་པ།</term>
-                            <term xml:lang="Sa-Ltn">Vaiśālī </term>
-                            <term type="definition">A major city during the Buddha’s time, the capital of the Licchavi republic. It was an important
-                                location where a number of Buddhist sūtras are said to have been taught.</term>
+                        <gloss xml:id="UT22084-094-002-54" type="place" mode="match">
+                            <term>Vaiśālī</term>
+                            <term xml:lang="Bo-Ltn" status="verified">yangs pa can</term>
+                            <term xml:lang="bo">ཡངས་པ་ཅན།</term>
+                            <term xml:lang="Sa-Ltn">Vaiśālī</term>
+                            <term type="definition">A major city during the Buddha’s time, the capital of the Licchavi republic. It was an important location where a number of Buddhist sūtras are said to have been taught.</term>
                         </gloss>
                     </item>
                 </list>
             </div>
         </back>
     </text>
-</TEI>
+</tei:TEI>
