--- a/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
+++ b/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
@@ -15,7 +15,7 @@
         <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan ’das ma sgrol ma’i rgyud las sna tshogs
           bstan pa</title>
         <title type="otherTitle" xml:lang="bo">བཅོམ་ལྡན་འདས་མ་སྒྲོལ་མའི་རྒྱུད་ལས་སྣ་ཚོགས་བསྟན་པ།</title>
-        <author role="translatorMain" ref="eft:team-48">Translated by Lhasey Lotsawa Translations
+        <author role="translatorMain" ref="eft:team-48">Translated by Samye Translations
           and Publications<lb/>under the patronage and supervision of 84000: Translating the Words
           of the Buddha</author>
         <author role="translatorEng" ref="eft:person-313">Laura Dainty</author>
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-16T10:19:35.642Z" user="admin">16/10/2022 10:19:35</note>
+        <note type="lastUpdated" date-time="2022-10-26T20:05:52.062Z" user="admin">26/10/2022 20:05:52</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:52:10.736Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:52:10.736Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T08:10:37.707Z" user="line-tofte">2.h</note>
@@ -124,6 +124,7 @@
           <note type="updated" update="text-version" value="1.0.3" date-time="2022-10-01T21:49:19.246Z" user="martina-cotter">updated glossary entries</note>
           <note type="updated" update="translation-status" value="1" date-time="2022-10-16T10:19:30.049Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.0.4" date-time="2022-10-16T10:19:30.049Z" user="sameer">Included in App v2.4</note>
+          <note type="updated" update="text-version" value="1.0.5" date-time="2022-10-26T20:05:49.209Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -140,7 +141,7 @@
       <div type="acknowledgment">
         <head type="acknowledgment" tid="3">Acknowledgements</head>
         <milestone unit="chunk" xml:id="UT22084-094-003-2"/>
-        <p tid="4">Translated by Lhasey Lotsawa Translations under the guidance of Phakchok
+        <p tid="4">Translated by Samye Translations under the guidance of Phakchok
           Rinpoche. The translation was produced by Laura Dainty with the assistance of Khenpo
           Tsöndrü Sangpo. Oriane Lavolé checked the translation against the Tibetan and edited it.
           Paul Thomas checked all the mantras and their variants. Stefan Mang and Oriane Lavolé
@@ -192,7 +193,7 @@
                 dang bcas pa</title>. See <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh438.html">Praise to Tārā with
                   Twenty-One Verses of Homage</ref>
-                            </title> (Toh 438), Lhasey Lotsawa Translations
+                            </title> (Toh 438), Samye Translations
               and Publications 2020. The Tibetan translators chose not to translate the praise into
               Tibetan but instead followed the common practice of rendering a dhāraṇī or mantra in a
               Tibetan transliteration of the Sanskrit. This untranslated transcription represents an
@@ -464,8 +465,8 @@
               Sanskrit. That practice has been followed here. In doing so, the standalone Tibetan
               translation of <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh438.html">Praise to Tārā with
-                  Twenty-One Verses of Homage</ref>
-                            </title> (Toh 438; see Lhasey Lotsawa
+                Twenty-One Verses of Homage</ref>
+                            </title> (Toh 438; see Samye
               Translations and Publications 2020) has been consulted, as well as the Sanskrit
               editions of the praise prepared by Wayman and Pandey. Though these witnesses are
               largely in agreement and without major variants, minor emendations to the Sanskrit
@@ -2213,13 +2214,13 @@
               <bibl xml:id="UT22084-094-003-427">
                                 <title xml:lang="Bo-Ltn">sgrol ma’i gzungs</title>
                   (<title xml:lang="Sa-Ltn">Tārādhāraṇī</title>). Toh 729, Degé Kangyur vol. 94
-                (rgyud, tsha), folio 222.a. English translation in Lhasey Lotsawa Translations and
+                (rgyud, tsha), folio 222.a. English translation in Samye Translations and
                 Publications 2021.</bibl>
               <bibl xml:id="UT22084-094-003-428">
                                 <title xml:lang="Bo-Ltn">sgrol ma la phyag ’tshal
                   nyi shu rtsa gcig gis bstod pa</title> (<title xml:lang="Sa-Ltn">Namastāraikaviṃśatistotra</title>) [<title xml:lang="en">Praise to Tārā with
                   Twenty-One Verses of Homage</title>]. Toh 438, Degé Kangyur vol. 81 (rgyud, ca),
-                folios 42.b–43.b. English translation in Lhasey Lotsawa Translations and
+                folios 42.b–43.b. English translation in Samye Translations and
                 Publications 2020.</bibl>
               <bibl xml:id="UT22084-094-003-429">chab mdo sa khul sman rstis khang. <title xml:lang="Bo-Ltn">khrungs dpe dri med shel gyi me long</title> [Mirror of
                 stainless crystal]. Beijing: mi rigs dpe skrun khang, 1995.</bibl>
@@ -2249,7 +2250,7 @@
           <bibl xml:id="UT22084-094-003-436">Landesman, Susan. “Goddess Tārā: Silence and Secrecy on
             the Path to Enlightenment.” <title xml:lang="en">Journal of Feminist Studies in
               Religion</title> 24, no. 1 (Spring 2008): 44–59.</bibl>
-          <bibl xml:id="UT22084-094-003-437">Lhasey Lotsawa Translations and Publications, trans.
+          <bibl xml:id="UT22084-094-003-437">Samye Translations and Publications, trans.
             (2020). <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh438.html">Praise to Tārā with Twenty-One Verses of Homage</ref>
                         </title> (<title xml:lang="Sa-Ltn">Namastāraikaviṃśatistotra</title>, Toh 438). 84000: Translating the
