--- a/translations/tengyur/placeholders/046-006_toh1922-krsnayamaritantrapanjika.xml
+++ b/translations/tengyur/placeholders/046-006_toh1922-krsnayamaritantrapanjika.xml
@@ -4,13 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Black Yamāri Tantra</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Kṛṣṇa­yamāri­tantra­pañjikā</title>
                 <title xml:lang="bo" type="mainTitle">གཤིན་རྗེ་དགྲ་ནག་པོའི་རྒྱུད་ཀྱི་དཀའ་འགྲེལ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">gshin rje dgra nag po'i rgyud kyi dka' 'grel/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Kṛṣṇa­yamāri­tantra­pañjikā</title>
-                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Black Yamāri Tantra</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -32,10 +34,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-31T09:18:19.713Z" user="admin">31/10/2022 09:18:19</note>
+                <note type="lastUpdated" date-time="2022-10-31T09:18:59.85Z" user="admin">31/10/2022 09:18:59</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-1918-2089_PH_new_v2.4.xml" date-time="2021-11-02T13:37:19.254Z" user="admin"/>
                 <note type="updated" update="translation-status" value="3" date-time="2022-10-31T09:18:15.551Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-10-31T09:18:15.551Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-31T09:18:54.269Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
