--- a/translations/kangyur/translations/094-008_toh731-the_sutra_of_tara_who_protects_from_the_eight_dangers.xml
+++ b/translations/kangyur/translations/094-008_toh731-the_sutra_of_tara_who_protects_from_the_eight_dangers.xml
@@ -17,7 +17,7 @@
                 <title type="longTitle" xml:lang="Sa-Ltn">*Ārya­tārāṣṭa­ghora­tāraṇī­sūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་མ་སྒྲོལ་མ་འཇིགས་པ་བརྒྱད་ལས་སྐྱོབ་པའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="zh"/>
-                <author role="translatorMain" ref="contributors.xml#team-48">Translated by Samye Translations and Publications<lb/>under the patronage and supervision of
+                <author role="translatorMain" ref="contributors.xml#team-48">Translated by Samye Translations<lb/>under the patronage and supervision of
                     84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-305">Stefan Mang</author>
                 <editor role="reviser" ref="contributors.xml#person-72">Oriane Lavolé</editor>
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.4 <date>2022</date>
+                <edition>v 1.2.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,7 +67,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-26T20:11:18.324Z" user="admin">26/10/2022 20:11:18</note>
+                <note type="lastUpdated" date-time="2022-11-04T14:40:49.507Z" user="admin">04/11/2022 14:40:49</note>
                 <note type="updated" update="text-version" value="" date-time="2019-04-01T07:36:02.112Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-04-01T07:36:02.112Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-09-13T08:57:04.119Z" user="john">2.g</note>
@@ -106,7 +106,7 @@
     <note type="updated" update="text-version" value="1.1.9" date-time="2021-03-12T19:23:15.33Z" user="celso">Non-breaking spaces before dandas</note>
     <note type="updated" update="text-version" value="1.2.1" date-time="2021-03-23T11:54:04.54Z" user="john">Adjustments to 1,20, 1.29, dialogue punctuation, and corresponding mentions in intro, as discussed in editorial meeting.</note>
     <note type="updated" update="text-version" value="1.2.2" date-time="2021-03-23T11:55:15.127Z" user="john">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.2.3" date-time="2021-09-24T13:44:23.128Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.2.4" date-time="2022-10-26T20:11:15.52Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
+    <note type="updated" update="text-version" value="1.2.3" date-time="2021-09-24T13:44:23.128Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.2.4" date-time="2022-10-26T20:11:15.52Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.5" date-time="2022-11-04T14:40:46.701Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -128,7 +128,7 @@
             <div type="acknowledgment">
                 <head type="acknowledgment" tid="55">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-094-008-2"/>
-                <p tid="56">Translated by Samye Translations and Publications under the
+                <p tid="56">Translated by Samye Translations under the
                     guidance of Phakchok Rinpoche. The translation and introduction were produced by
                     Stefan Mang and Peter Woods, and edited by Oriane Lavolé.</p>
                 <p tid="4">This translation has been completed under the patronage and supervision
@@ -547,11 +547,11 @@
                     <bibl xml:id="UT22084-094-008-77">
                         <title xml:lang="Bo-Ltn">sgrol ma’i gzungs </title>[<title xml:lang="en">The
                             Dhāraṇī of Tārā</title>]. Toh 729, Degé Kangyur vol. 94 (rgyud,
-                        tsha), folio 222.a. English translation in Samye Translations and Publications (2021).</bibl>
+                        tsha), folio 222.a. English translation in Samye Translations (2021).</bibl>
                     <bibl xml:id="UT22084-094-008-78">
                         <title xml:lang="Bo-Ltn">sgrol ma’i gzungs </title>[<title xml:lang="en">The
                             Dhāraṇī of Tārā</title>]. Toh 1001, Degé Kangyur vol. 102 (gzungs,
-                        waM), folio 160.a. English translation in Samye Translations and Publications (2021).
+                        waM), folio 160.a. English translation in Samye Translations (2021).
                     </bibl>
                     <bibl xml:id="UT22084-094-008-73">
                         <title xml:lang="Bo-Ltn">dam pa’i chos
@@ -573,7 +573,7 @@
                     <bibl xml:id="UT22084-094-008-82">Herrmann-Pfandt, Adelheid. <title xml:lang="de">Die lHan kar ma: ein früher Katalog der ins Tibetische
                             übersetzten buddhistischen Texte</title>. Vienna: Verlag der
                         Österreichischen Akademie der Wissenschaften, 2008.</bibl>
-                    <bibl xml:id="UT22084-094-008-118">Samye Translations and Publications, trans. <title xml:lang="en">
+                    <bibl xml:id="UT22084-094-008-118">Samye Translations, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh729.html">The Dhāraṇī of Tārā</ref>
                         </title>. 84000: Translating the Words of the Buddha, 2021.</bibl>
                     <bibl xml:id="UT22084-094-008-112">Roberts, Peter Alan, trans. <title xml:lang="en">
