--- a/translations/kangyur/placeholders/097-002_toh829-the_sutra_of_allgathering_awareness_or_the_sutra_that_gathers_all_intentions.xml
+++ b/translations/kangyur/placeholders/097-002_toh829-the_sutra_of_allgathering_awareness_or_the_sutra_that_gathers_all_intentions.xml
@@ -16,11 +16,12 @@
                 <sponsor ref="sponsors.xml#sponsor-38">Sun Ping, Tian Xingwen and Sun Fanglin</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-097-002"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh829" type="text">
@@ -34,8 +35,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:47:09.075Z" user="admin">26/07/2022 07:47:09</note>
+                <note type="lastUpdated" date-time="2022-11-05T13:41:32.03Z" user="admin">05/11/2022 13:41:32</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:47:07.07Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-11-05T13:41:27.832Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-05T13:41:27.832Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
